# simple_project

./: README.md  setup.cfg  setup.py
simple_code/: config.yaml  simple.py
