[metadata]
name = simple-project
version = 1.0.0
author = Nghia Le
author_email = nghia.le@gooddata.com
description= A simple project to practice the packaging with setuptools/setup.py
url = https://github.com/trongnghia203/simple_project

[options]
packages = 
  simple_code
install_requires =
  pyyaml

[options.package_data]
simple_code = config.yaml

[options.entry_points]
console_scripts =
  simple.py = simple_code.simple:run
